# mometrics

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .env.test.example  Dockerfile  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5ee7024acb99_init_schema.py  b8d547b2777a_create_users_table.py  c8e5ae6f80b0_create_users_table.py  dd7325f069b5_add_refresh_tokens_table.py
backend/app/: main.py
backend/app/api/v1/: auth.py  health.py  monitors.py  projects.py  public_monitors.py  public_projects.py  users.py
backend/app/core/: celery_app.py  config.py  deps.py  logging.py  redis_client.py  security.py
backend/app/crud/: check_result.py  monitor.py  project.py  public_monitor.py  public_project.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  check_result.py  monitor.py  project.py  refresh_tokens.py  user.py
backend/app/schemas/: auth.py  check_result.py  monitor.py  project.py  public_monitor.py  public_project.py  user.py
backend/app/services/: monitoring.py  stats.py
backend/app/tasks/: __init__.py  monitors.py
backend/tests/: conftest.py  test_health.py  test_monitors.py  test_smoke_api.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: main.tsx  theme.ts
frontend/src/api/: auth.ts  client.ts  monitor.ts  monitors.ts  projects.ts  public.ts
frontend/src/components/Layout/: AppLayout.tsx  Footer.tsx  Header.tsx
frontend/src/pages/: Home.tsx  LandingPage.tsx  LoginPage.tsx  MonitorPage.tsx  MonitorsPage.tsx  ProjectsPage.tsx  PublicMonitorPage.tsx  PublicMonitorsPage.tsx
frontend/src/router/: index.tsx
frontend/src/utils/: chartUtils.ts
